[package]
name = "hlcc"
version = "0.1.0"
authors = ["Jana Marie Hemsing <janamarie@janamarie.dev>"]
edition = "2021"
description = "A string parsing and web based hormone level conversion calculator. It can evaluate strings like „Testo 1.8nmol/l to pg/ml“ and display the result."
repository = "https://github.com/Jana-Marie/hlcc/"
license = "tba"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.63"
nom = "7.1.0"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
