[package]
name = "hlcc-parser"
version = "0.1.0"
authors = ["Jana Marie Hemsing <janamarie@janamarie.dev>", "Yureka Lilian <crates@yuka.dev>"]
edition = "2021"
description = "A string parsing and web based hormone level conversion calculator. It can evaluate strings like „Testo 1.8nmol/l to pg/ml“ and display the result."
repository = "https://github.com/Jana-Marie/hlcc/"
license = "AGPL-3.0-or-later"

[build-dependencies]
lalrpop = "0.20.0"

[dependencies]
lalrpop-util = { version = "0.20.0", features = ["lexer"] }
