[package]
name = "hlcc-web"
version = "0.1.0"
authors = ["Jana Marie Hemsing <janamarie@janamarie.dev>"]
edition = "2021"
description = "A string parsing and web based hormone level conversion calculator. It can evaluate strings like „Testo 1.8nmol/l to pg/ml“ and display the result."
repository = "https://github.com/Jana-Marie/hlcc/"
license = "AGPL-3.0-or-later"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2"
hlcc-parser = { path = "../hlcc-parser" }
wee_alloc = { version = "0.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "s"

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]
